K8SPlateFrom/gvp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gvp
  labels:
    app: gvp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gvp
      version: v1
  template:
    metadata:
      labels:
        app: gvp
        version: v1
    spec:
      containers:
        - name: gvp
          image: gvp:v1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8000
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
           - name: gvp-config
             mountPath: /opt/src/gvp/conf/app.ini
             subPath:  app.ini
      volumes:
        - name: gvp-config
          configMap:
            name: gvp-config
