K8SPlateFrom/gvp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gvp-service
  name: gvp-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: httpport
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: gvp
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
