K8SPlateFrom/gvp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-for-gvp  
spec:
  rules:                      
  - host: ztgame.gvp.com   
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: gvp-service 
          servicePort: 8000
